# ai-scheduler

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  scheduler.py  store.py
.github/workflows/: ci.yml  release.yml
adapters/: __init__.py  base.py  claude_adapter.py  codex_adapter.py
commands/: __init__.py  add.py  daemon.py  list.py  remove.py  results.py
tests/: conftest.py  test_adapters.py  test_add.py  test_daemon.py  test_results.py  test_scheduler.py  test_store.py
