[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scheduler"
version = "0.1.0"
description = "定时自动调用 claude / codex 命令行工具提问的 CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
ai-scheduler = "main:app"

[tool.setuptools]
# 扁平布局：根目录 .py 作为顶层模块，adapters/ commands/ 作为包
py-modules = ["config", "store", "scheduler", "main"]
packages = ["adapters", "commands"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# 默认启用 E/F，额外加 I（import 排序）、UP（pyupgrade）
select = ["E", "F", "I", "UP"]
